// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Profile initial should have match the correct default snapshot 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Profile
    user={
      Object {
        "availability": Object {},
        "background": "",
        "cohort": "",
        "current_job": "",
        "email": "",
        "first_name": "",
        "identities": Array [],
        "last_name": "",
        "linkedin": "",
        "location": "",
        "non_tech_skills": Array [],
        "phone": "",
        "preferred_method": "",
        "program": "",
        "slack": "",
        "tech_skills": Array [],
      }
    }
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "checkPropTypes": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <ProfileSection
          content={
            <UserInfo
              cohort=""
              current_job=""
              first_name=""
              identities={Array []}
              last_name=""
              profile={true}
              program=""
            />
          }
          name="User Info"
        />,
        <ProfileSection
          content={
            <UserBio
              email=""
              linkedin=""
              location=""
              phone=""
              preferred_method=""
              profile={true}
              slack=""
            />
          }
          name="Contact Info"
        />,
        <ProfileSection
          content={
            <UserBackground
              background=""
              profile={true}
            />
          }
          name="Background Info"
        />,
        <ProfileSection
          content={
            <UserSchedule
              availability={Object {}}
              profile={true}
            />
          }
          name="Availability Info"
        />,
        <ProfileSection
          content={
            <UserTechSkills
              profile={true}
              tech_skills={Array []}
            />
          }
          name="TechSkills"
        />,
        <ProfileSection
          content={
            <UserNonTechSkills
              non_tech_skills={Array []}
              profile={true}
            />
          }
          name="Non-TechSkills"
        />,
      ],
      "className": "link-content",
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "content": <UserInfo
            cohort=""
            current_job=""
            first_name=""
            identities={Array []}
            last_name=""
            profile={true}
            program=""
          />,
          "name": "User Info",
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "content": <UserBio
            email=""
            linkedin=""
            location=""
            phone=""
            preferred_method=""
            profile={true}
            slack=""
          />,
          "name": "Contact Info",
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "content": <UserBackground
            background=""
            profile={true}
          />,
          "name": "Background Info",
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "content": <UserSchedule
            availability={Object {}}
            profile={true}
          />,
          "name": "Availability Info",
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "content": <UserTechSkills
            profile={true}
            tech_skills={Array []}
          />,
          "name": "TechSkills",
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "content": <UserNonTechSkills
            non_tech_skills={Array []}
            profile={true}
          />,
          "name": "Non-TechSkills",
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <ProfileSection
            content={
              <UserInfo
                cohort=""
                current_job=""
                first_name=""
                identities={Array []}
                last_name=""
                profile={true}
                program=""
              />
            }
            name="User Info"
          />,
          <ProfileSection
            content={
              <UserBio
                email=""
                linkedin=""
                location=""
                phone=""
                preferred_method=""
                profile={true}
                slack=""
              />
            }
            name="Contact Info"
          />,
          <ProfileSection
            content={
              <UserBackground
                background=""
                profile={true}
              />
            }
            name="Background Info"
          />,
          <ProfileSection
            content={
              <UserSchedule
                availability={Object {}}
                profile={true}
              />
            }
            name="Availability Info"
          />,
          <ProfileSection
            content={
              <UserTechSkills
                profile={true}
                tech_skills={Array []}
              />
            }
            name="TechSkills"
          />,
          <ProfileSection
            content={
              <UserNonTechSkills
                non_tech_skills={Array []}
                profile={true}
              />
            }
            name="Non-TechSkills"
          />,
        ],
        "className": "link-content",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "content": <UserInfo
              cohort=""
              current_job=""
              first_name=""
              identities={Array []}
              last_name=""
              profile={true}
              program=""
            />,
            "name": "User Info",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "content": <UserBio
              email=""
              linkedin=""
              location=""
              phone=""
              preferred_method=""
              profile={true}
              slack=""
            />,
            "name": "Contact Info",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "content": <UserBackground
              background=""
              profile={true}
            />,
            "name": "Background Info",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "content": <UserSchedule
              availability={Object {}}
              profile={true}
            />,
            "name": "Availability Info",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "content": <UserTechSkills
              profile={true}
              tech_skills={Array []}
            />,
            "name": "TechSkills",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "content": <UserNonTechSkills
              non_tech_skills={Array []}
              profile={true}
            />,
            "name": "Non-TechSkills",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "legacyContextMode": "parent",
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getChildContext": Object {
            "calledByRenderer": false,
          },
          "getDerivedStateFromProps": Object {
            "hasShouldComponentUpdateBug": false,
          },
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
  Symbol(enzyme.__childContext__): null,
}
`;

exports[`Profile initial should have match the correct props snapshot 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Profile
    user={
      Object {
        "availability": Object {
          "0": Array [
            false,
            false,
            true,
          ],
          "1": Array [
            false,
            false,
            true,
          ],
          "2": Array [
            false,
            false,
            true,
          ],
          "3": Array [
            false,
            false,
            true,
          ],
          "4": Array [
            false,
            false,
            true,
          ],
          "5": Array [
            false,
            false,
            true,
          ],
          "6": Array [
            false,
            false,
            true,
          ],
        },
        "background": "things and stuff",
        "cohort": "1810",
        "current_job": "Person",
        "email": "email",
        "first_name": "first",
        "identities": Array [
          1,
        ],
        "last_name": "last",
        "linkedin": "linkedin",
        "location": "Denver",
        "non_tech_skills": Array [
          "2",
          "4",
        ],
        "phone": "1910201231",
        "preferred_method": "1",
        "program": "FE",
        "slack": "slack",
        "tech_skills": Array [
          "1",
          "3",
        ],
      }
    }
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "checkPropTypes": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <ProfileSection
          content={
            <UserInfo
              cohort="1810"
              current_job="Person"
              first_name="first"
              identities={
                Array [
                  1,
                ]
              }
              last_name="last"
              profile={true}
              program="FE"
            />
          }
          name="User Info"
        />,
        <ProfileSection
          content={
            <UserBio
              email="email"
              linkedin="linkedin"
              location="Denver"
              phone="1910201231"
              preferred_method="1"
              profile={true}
              slack="slack"
            />
          }
          name="Contact Info"
        />,
        <ProfileSection
          content={
            <UserBackground
              background="things and stuff"
              profile={true}
            />
          }
          name="Background Info"
        />,
        <ProfileSection
          content={
            <UserSchedule
              availability={
                Object {
                  "0": Array [
                    false,
                    false,
                    true,
                  ],
                  "1": Array [
                    false,
                    false,
                    true,
                  ],
                  "2": Array [
                    false,
                    false,
                    true,
                  ],
                  "3": Array [
                    false,
                    false,
                    true,
                  ],
                  "4": Array [
                    false,
                    false,
                    true,
                  ],
                  "5": Array [
                    false,
                    false,
                    true,
                  ],
                  "6": Array [
                    false,
                    false,
                    true,
                  ],
                }
              }
              profile={true}
            />
          }
          name="Availability Info"
        />,
        <ProfileSection
          content={
            <UserTechSkills
              profile={true}
              tech_skills={
                Array [
                  "1",
                  "3",
                ]
              }
            />
          }
          name="TechSkills"
        />,
        <ProfileSection
          content={
            <UserNonTechSkills
              non_tech_skills={
                Array [
                  "2",
                  "4",
                ]
              }
              profile={true}
            />
          }
          name="Non-TechSkills"
        />,
      ],
      "className": "link-content",
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "content": <UserInfo
            cohort="1810"
            current_job="Person"
            first_name="first"
            identities={
              Array [
                1,
              ]
            }
            last_name="last"
            profile={true}
            program="FE"
          />,
          "name": "User Info",
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "content": <UserBio
            email="email"
            linkedin="linkedin"
            location="Denver"
            phone="1910201231"
            preferred_method="1"
            profile={true}
            slack="slack"
          />,
          "name": "Contact Info",
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "content": <UserBackground
            background="things and stuff"
            profile={true}
          />,
          "name": "Background Info",
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "content": <UserSchedule
            availability={
              Object {
                "0": Array [
                  false,
                  false,
                  true,
                ],
                "1": Array [
                  false,
                  false,
                  true,
                ],
                "2": Array [
                  false,
                  false,
                  true,
                ],
                "3": Array [
                  false,
                  false,
                  true,
                ],
                "4": Array [
                  false,
                  false,
                  true,
                ],
                "5": Array [
                  false,
                  false,
                  true,
                ],
                "6": Array [
                  false,
                  false,
                  true,
                ],
              }
            }
            profile={true}
          />,
          "name": "Availability Info",
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "content": <UserTechSkills
            profile={true}
            tech_skills={
              Array [
                "1",
                "3",
              ]
            }
          />,
          "name": "TechSkills",
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "content": <UserNonTechSkills
            non_tech_skills={
              Array [
                "2",
                "4",
              ]
            }
            profile={true}
          />,
          "name": "Non-TechSkills",
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <ProfileSection
            content={
              <UserInfo
                cohort="1810"
                current_job="Person"
                first_name="first"
                identities={
                  Array [
                    1,
                  ]
                }
                last_name="last"
                profile={true}
                program="FE"
              />
            }
            name="User Info"
          />,
          <ProfileSection
            content={
              <UserBio
                email="email"
                linkedin="linkedin"
                location="Denver"
                phone="1910201231"
                preferred_method="1"
                profile={true}
                slack="slack"
              />
            }
            name="Contact Info"
          />,
          <ProfileSection
            content={
              <UserBackground
                background="things and stuff"
                profile={true}
              />
            }
            name="Background Info"
          />,
          <ProfileSection
            content={
              <UserSchedule
                availability={
                  Object {
                    "0": Array [
                      false,
                      false,
                      true,
                    ],
                    "1": Array [
                      false,
                      false,
                      true,
                    ],
                    "2": Array [
                      false,
                      false,
                      true,
                    ],
                    "3": Array [
                      false,
                      false,
                      true,
                    ],
                    "4": Array [
                      false,
                      false,
                      true,
                    ],
                    "5": Array [
                      false,
                      false,
                      true,
                    ],
                    "6": Array [
                      false,
                      false,
                      true,
                    ],
                  }
                }
                profile={true}
              />
            }
            name="Availability Info"
          />,
          <ProfileSection
            content={
              <UserTechSkills
                profile={true}
                tech_skills={
                  Array [
                    "1",
                    "3",
                  ]
                }
              />
            }
            name="TechSkills"
          />,
          <ProfileSection
            content={
              <UserNonTechSkills
                non_tech_skills={
                  Array [
                    "2",
                    "4",
                  ]
                }
                profile={true}
              />
            }
            name="Non-TechSkills"
          />,
        ],
        "className": "link-content",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "content": <UserInfo
              cohort="1810"
              current_job="Person"
              first_name="first"
              identities={
                Array [
                  1,
                ]
              }
              last_name="last"
              profile={true}
              program="FE"
            />,
            "name": "User Info",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "content": <UserBio
              email="email"
              linkedin="linkedin"
              location="Denver"
              phone="1910201231"
              preferred_method="1"
              profile={true}
              slack="slack"
            />,
            "name": "Contact Info",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "content": <UserBackground
              background="things and stuff"
              profile={true}
            />,
            "name": "Background Info",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "content": <UserSchedule
              availability={
                Object {
                  "0": Array [
                    false,
                    false,
                    true,
                  ],
                  "1": Array [
                    false,
                    false,
                    true,
                  ],
                  "2": Array [
                    false,
                    false,
                    true,
                  ],
                  "3": Array [
                    false,
                    false,
                    true,
                  ],
                  "4": Array [
                    false,
                    false,
                    true,
                  ],
                  "5": Array [
                    false,
                    false,
                    true,
                  ],
                  "6": Array [
                    false,
                    false,
                    true,
                  ],
                }
              }
              profile={true}
            />,
            "name": "Availability Info",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "content": <UserTechSkills
              profile={true}
              tech_skills={
                Array [
                  "1",
                  "3",
                ]
              }
            />,
            "name": "TechSkills",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "content": <UserNonTechSkills
              non_tech_skills={
                Array [
                  "2",
                  "4",
                ]
              }
              profile={true}
            />,
            "name": "Non-TechSkills",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "legacyContextMode": "parent",
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getChildContext": Object {
            "calledByRenderer": false,
          },
          "getDerivedStateFromProps": Object {
            "hasShouldComponentUpdateBug": false,
          },
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
  Symbol(enzyme.__childContext__): null,
}
`;
